# arc_agi_babies

./: .env.example  .gitignore  pyproject.toml
src/arc_agi_babies/: __init__.py  agent.py  main.py  prompt.py  runner.py
src/arc_agi_babies/agents/raw/: agent.py  prompt.py
src/arc_agi_babies/config/: settings.py
src/arc_agi_babies/utils/: plot.py  utils.py
src/google_agent/: __init__.py
