[project]
name = "google-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Méo Desbois-Renaudin", email = "meo-externe.desbois-renaudin@edf.fr" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
google-agent = "google_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
